force-app/main/default/objects/SustainabilityScorecard/SustainabilityScorecard.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>