force-app/main/default/objects/SustainabilityScorecard/fields/Emission_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Emission_End_Date__c</fullName>
    <label>Emission End Date</label>
    <type>Date</type>
</CustomField>