force-app/main/default/objects/SustainabilityScorecard/fields/Emission_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Emission_Start_Date__c</fullName>
    <label>Emission Start Date</label>
    <type>Date</type>
</CustomField>