force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Data_Approver__c.field-meta.xml
<CustomField>
    <fullName>NZC_Data_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the Approver of Sustainability Scorecard filled by the Portal User</description>
    <label>Data Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sustainability_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>