force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Emissions_For__c.field-meta.xml
<CustomField>
    <fullName>NZC_Emissions_For__c</fullName>
    <description>SB: Created for NZC Implementation &lt;US No&gt; Purpose: This field is to capture the NZC Emissions for Parent/Individual</description>
    <label>NZC Emissions For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>