force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Notification_Sent_date__c.field-meta.xml
<CustomField>
    <fullName>NZC_Notification_Sent_date__c</fullName>
    <description>Used in &apos;NZC Email Notification for SBTI Updation&apos; Flow to store the date when email is sent</description>
    <label>Notification Sent date</label>
    <type>Date</type>
</CustomField>