force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>NZC_Parent_Company__c</fullName>
    <description>SB: Created for NZC Implementation &lt;US No&gt; Purpose: This field is to capture the NZC Parent Company name</description>
    <label>NZC Parent Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>