force-app/main/default/objects/SustainabilityScorecard/fields/NZC_SBTI_Updation_Threshold__c.field-meta.xml
<CustomField>
    <fullName>NZC_SBTI_Updation_Threshold__c</fullName>
    <description>After 6 months of getting onboarded of a supplier, if Science Based Target Status field of Supplier Scorecard is blank, then this checkbox will be checked</description>
    <formula>AND(  
    IF( ( TODAY() - NZC_Supplier_Onboarded_Date1__c ) &gt;= VALUE( $Label.NZC_SBTI_Updation_Limit_Time_in_Days ), 
         True, 
         False) , 
    OR(ISBLANK(TEXT( ScienceBasedTargetStatus )), 
       ISPICKVAL( ScienceBasedTargetStatus , &apos;Planning&apos;),                           
       ISPICKVAL( ScienceBasedTargetStatus , &apos;Declined&apos;) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBTI Updation Threshold</label>
    <type>Checkbox</type>
</CustomField>