force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Short_term_or_Long_Term_Target__c.field-meta.xml
<CustomField>
    <fullName>NZC_Short_term_or_Long_Term_Target__c</fullName>
    <description>long term and short-term target sections visible to the suppliers in the portal</description>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short-term</fullName>
            </value>
            <value>
                <fullName>Long-term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>