force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>NZC_Supplier_Name__c</fullName>
    <description>Used in Email Templates</description>
    <formula>Supplier.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>