force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Supplier_Onboarded1__c.field-meta.xml
<CustomField>
    <fullName>NZC_Supplier_Onboarded1__c</fullName>
    <description>Whenever the Status of Supplier Object is Updated to &quot;Supplier Onboarded&quot; this Checkbox is checked</description>
    <formula>IF(  ISPICKVAL(Supplier.NZC_Status__c, &apos;Supplier Onboarded&apos;), true, false)</formula>
    <label>Supplier Onboarded</label>
    <type>Checkbox</type>
</CustomField>