force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Supplier_Onboarded_Date1__c.field-meta.xml
<CustomField>
    <fullName>NZC_Supplier_Onboarded_Date1__c</fullName>
    <description>It is a formula field on Sustainability Scorecard object on which we&apos;re populating the Supplier Onboarded Date from supplier record</description>
    <formula>Supplier.NZC_Supplier_Onboarded_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Onboarded Date</label>
    <type>Date</type>
</CustomField>