force-app/main/default/objects/SustainabilityScorecard/fields/NZC_Supplier_Region__c.field-meta.xml
<CustomField>
    <fullName>NZC_Supplier_Region__c</fullName>
    <description>It is a formula field on Sustainability Scorecard object on which we&apos;re populating the region from supplier record</description>
    <formula>TEXT(Supplier.NZC_Region__c)</formula>
    <label>Supplier Region</label>
    <type>Text</type>
</CustomField>