force-app/main/default/objects/SustainabilityScorecard/fields/SupplierAnnualRevenueCurrency__c.field-meta.xml
<CustomField>
    <fullName>SupplierAnnualRevenueCurrency__c</fullName>
    <label>Supplier Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>