force-app/main/default/objects/SustainabilityScorecard/listViews/EMEA_Region.listView-meta.xml
<ListView>
    <fullName>EMEA_Region</fullName>
    <columns>Name</columns>
    <columns>Supplier</columns>
    <columns>SupplierContact</columns>
    <columns>Status</columns>
    <columns>CompanyAnnualExpenditure</columns>
    <columns>Scope3EmssnCalculationMeasure</columns>
    <columns>FinalScorecardEmissions</columns>
    <columns>AllocationStatus</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NZC_Supplier_Region__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>EMEA Region</label>
    <sharedTo>
        <group>ESG_Team</group>
    </sharedTo>
</ListView>